--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -442,6 +442,49 @@ strong {
     transform: scale(1.05);
 }
 
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9); /* Black background with transparency */
+}
+
+.modal-content {
+    margin: 10% auto;
+    display: block;
+    max-width: 80%; /* Adjust to fit the image */
+    max-height: 80%; /* Limit modal image height */
+}
+
+.modal img {
+    width: 100%;
+    height: auto;
+}
+
+/* Close button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover, .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
 @media screen and (max-width: 800px) {
     .column{
         flex: 50%;
@@ -687,7 +730,7 @@ strong {
 }
 
 .navbar-toggler .navbar-toggler-icon {
-  background: var(--white-color);
+  background: var(--navtext-color);
   transition: background 10ms 300ms ease;
   display: block;
   width: 30px;
@@ -703,7 +746,7 @@ strong {
   position: absolute;
   right: 0;
   left: 0;
-  background: var(--white-color);
+  background: var(--navtext-color);
   width: 30px;
   height: 2px;
   content: '';
@@ -1570,9 +1613,6 @@ cards
   }
 
 
-  .navbar {
-    background-color: var(--secondary-color);
-  }
 
   .navbar-nav .dropdown-menu {
     position: relative;
@@ -1655,11 +1695,44 @@ cards
   .contact-info-item {
     width: 72%;
   }
-}
 
-@media screen and (max-width: 360px) {
-  .custom-btn {
-    font-size: 12px;
-    padding: 4px 12px;
-  }
+  .hero-section, .chalet-section, .events-section{
+    padding-left: 10px;
+    }
+
+    .hero2-section, .golf{
+      padding-left: 10px;
+      padding-top: 250px;
+      }
+
+
+      .hero3-section{
+        padding-top: 0px;
+        }
+
+    .card {
+        width: calc(50% - 10px); /* Two cards side by side with a small gap */
+        font-size: 14px; /* Reduce font size */
+    }
+    h3 {
+        font-size: 16px;
+    }
+    .size, .description, p {
+        font-size: 12px;
+    }
+
+    .slideshow2-container {
+        width: 100%;
+        height: 350px;
+    }
+
+
+    .row2{
+       padding: 0;
+   }
+
+   .img-hover-zoom:hover img{
+       transform: scale(1.5);
+   }
+
 }
