upd navbar color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -567,7 +567,7 @@ strong {
 }
 
 .navbar {
-  background: transparent;
+  background: var(--white-color);
   z-index: 99;
   padding-top: 15px;
   padding-bottom: 15px;
